--- a/browser-test.html
+++ b/browser-test.html
@@ -8,12 +8,10 @@
     <div id="mocha"></div>
     <script src="node_modules/mocha/mocha.js"></script>
     <script src="node_modules/chai/chai.js"></script>
-    <script>mocha.setup('bdd')</script>
+    <script>mocha.setup("bdd")</script>
 
-    <script src="dist/identifiers.bundle.js"></script>
-
-    <!-- webpacked unit tests -->
-    <script src="browser-test/identifiers.tests.bundle.js" charset="utf8"></script>
+    <!-- webpacked identifiers + unit tests -->
+    <script src="browser-test/identifiers.test.bundle.js" charset="utf8"></script>
     <script>
       mocha.run();
     </script>
